# TTK7_second_project

./: README.md  Signal2_2018.csv  emd.ipynb  plot_styles.py  pyproject.toml  real_signal.ipynb  real_signal_memd.ipynb  test.py
