[tool.poetry]
name = "emd-on-synth-signal"
version = "0.1.0"
description = ""
authors = ["Djolo1802 <veljkovic.djordje@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
six = "^1.17.0"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
ipykernel = "^6.30.1"
emd-signal = "^1.6.4"
scipy = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
